<resources>
    <string name="app_name">DoxBox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">Series</string>
    <string name="title_twitch">Twitch</string>
    <string name="title_youtube">Youtube</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Trending</string>

    <string name="tvYear">Year: </string>
    <string name="tvActor">Actor: </string>
    <string name="tvDirector">Director: </string>
    <string name="tvDuration">Duration: </string>
    <string name="tvGenre">Genre: </string>
    <string name="tvSummary">Summary: </string>
    <string name="btnWatchNow">Watch Now!</string>
    <string name="search_title">Search</string>
</resources>
